remove SQlite and change for Vercel Postgres

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,6 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
-# Prisma
-DATABASE_URL="file:./dev.db" 
+# Database
+POSTGRES_PRISMA_URL=""
+POSTGRES_URL_NON_POOLING=""
